@@ -30,9 +30,11 @@ Version 1.1.5 to be released
 - Enh: Added checking for empty keywords in addSearchCondition(), to prevent adding unnecessary conditions (mdomba)
 - Enh: Added flushValues() method to the cache classes (Y!!)
 - Enh: Added buttonset for CJuiButoon (sebas)
+- Enh: Improved error handling to catch errors occurring in CApplication::end() (Qiang)
 - Chg #1680: Upgraded jQuery to version 1.4.3 (Sam Dark)
 - Chg: The javascript files of CListView and CGridView are now registered at the end of the page (Qiang)
 - Chg: Log filters will now be invoked only when there are some log messages available (Qiang)
+- Chg: removed destructor from CDbCache, CDbAuthManager and CDbLogRoute to avoid potential DB connection issue (Qiang)
 
 
 Version 1.1.4 September 5, 2010
